# acme-tiny-rules

./: README.md  acme-tiny-rules.cabal
src/: Main.hs
