cabal-version:      2.4
name:               acme-tiny-rules
version:            0.1.0.0

executable acme-tiny-rules
  main-is:          Main.hs
  build-depends:    base
                  , containers
                  , transformers
                  , gloss
  hs-source-dirs:   src
  ghc-options: -W -Wall -threaded
